# test-c-media

./: CMakeLists.txt  README.md
cmake/libs/: ffmpeg.cmake
include/: av_decoder.h  av_encoder.h  av_reader.h  ffmpeg_utils.h
media/: audio.aac  cmd.txt
src/: CMakeLists.txt  av_decoder.cpp  av_encoder.cpp  av_reader.cpp  av_writer.cpp  ffmpeg_utils.cpp  main.cpp
src/utils/: av_decoder.cpp  av_encoder.cpp  av_encoder.h  av_reader.cpp  av_writer.cpp  av_writer.h  ffmpeg_utils.cpp
